stop positioning views for floaters before the frame is placed - avoids flicker due to painting at erroneous position. b=128133 r=karnaze,dbaron sr=waterson a=roc,jaimejr